--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 		<meta name="keywords" content="html framework, front end framework, css framework, html5 css3 framework">
 		<meta name="description" content="Crutch is a simple and clean front-end framework built on SCSS/SASS and designed to accomodate for the web developer who's more focused on function than form and need a crutch for their user interface development.">
 
-		<title>Welcome to Crutch.</title>
+		<title>This is Crutch.</title>
 		<link rel="stylesheet" type="text/css" href="dist/css/crutch.min.css">
 	</head>
-	<body class="container-desktop-wide bg-dark text-white row flex-nowrap" id="top">
-		<aside class="item-third margin-left-nothing fixed-left display-tablet-up-only margin-right-most padding-left-nothing">
-			<nav class="row navigation flex-direction-column justify-content-start padding-right-most margin-right-most margin-left-nothing padding-left-nothing">
+	<body class="container-desktop-wide bg-dark text-white row flex-nowrap padding-right-nothing" id="top">
+		<aside class="item-third width-three-quarter margin-left-nothing fixed-left display-tablet-up-only margin-right-most padding-left-nothing padding-right-most">
+			<nav class="row navigation flex-direction-column justify-content-start padding-right-most margin-right-most margin-left-nothing padding-left-nothing text-center">
 				<a class="navigation-logo" href="#top">Crutch</a>
 				<a class="navigation-link" href="#typography">Typography</a>
 				<a class="navigation-link" href="#layout">Layout</a>
@@ -23,15 +23,14 @@
 		</aside>
 
 		<div class="margin-left-most padding-left-most display-tablet-up-only"></div>
+		<div class="margin-left-something padding-left-something display-tablet-up-only"></div>
 
-		<main class="item padding-left-more">
+		<main class="item margin-right-nothing padding-right-nothing">
 			<section class="row margin-top-nothing">
-				<header class="item margin-top-nothing">
-					<h1 class="display-biggest">Welcome to Crutch.</h1>
-					<div class="pane pane-rounded bg-light text-dark">
-						<p class="pane-content text-more">Crutch is a simple and clean CSS framework offering straightforward, responsive front-end development in a smaller and easier to understand package than other similar frameworks. Crutch uses a simple three-column grid system for layout and comes with a host of utilities for margin, padding, positioning, and flexbox classes as well as default styling for many HTML elements. Styling is normalized for cross-browser rendering consistency and many elements are easily manipulated and customized via SCSS/SASS variables. Designed for ease-of-use and simple deployment for web-based projects focused more on function than form by developers who don't necessarily have the skill or the need for extensive hand-coded CSS styling and layout.</p>
-
-						<p class="pane-content">Much of the initial SCSS/SASS file structure and implementation was heavily based upon Boostrap 4, however not much remains of Bootstrap, save for the inspiration.</p>
+				<header class="item margin-top-nothing margin-right-nothing padding-right-nothing">
+					<h1 class="display-biggest">This is Crutch.</h1>
+					<div class="pane rounded-border-left bg-light text-dark">
+						<p class="pane-content text-more">Crutch is a lightweight and clean CSS framework offering straightforward, responsive front-end development in a smaller and easier to understand package than other similar frameworks. Crutch uses a simple three-column grid system for layout and comes with a host of utilities for margin, padding, positioning, and flexbox classes as well as default styling for many HTML elements. Styling is normalized for cross-browser rendering consistency and many elements are easily manipulated and customized via SCSS/SASS variables. Designed for ease-of-use and simple deployment for web-based projects focused more on function than form by developers who don't necessarily have the skill or the need for extensive hand-coded CSS styling and layout. Much of the initial SCSS/SASS file structure and implementation was heavily based upon Boostrap 4, however not much remains of Bootstrap, save for the inspiration.</p>
 
 						<p class="small text-center">This manual is constantly being updated as the framework grows.</p>
 					</div>
@@ -39,10 +38,10 @@
 			</section>
 
 			<section class="row" id="typography">
-				<div class="item">
+				<div class="item margin-right-nothing padding-right-nothing">
 					<p class="display-big">Typography</p>
 
-					<div class="pane pane-rounded bg-light text-dark">
+					<div class="pane rounded-border-left bg-light text-dark">
 						<div class="pane-content">
 							<p>Crutch's typography styling is appealing and modern. Several text-manipulation classes are also included for the user as well.</p>
 							<p>	Headings appear as follows:
@@ -87,10 +86,10 @@
 			</section>
 
 			<section class="row" id="layout">
-				<div class="item">
+				<div class="item margin-right-nothing padding-right-nothing">
 					<p class="display-big">Layout, Positioning, Navigation and Panes</p>
 
-					<div class="pane pane-rounded bg-light text-dark">
+					<div class="pane rounded-border-left bg-light text-dark">
 						<p class="pane-content">Crutch uses a simple three column grid system for layout. Simply create a parent container called a .row, and within that row use either .item, .item-half, or .item-third to section off content. At mobile resolutions these items stack upon one-another. To keep these items from doing so, simply add the class .flex-nowrap to the parent row container element.</p>
 
 						<dl class="pane-content">Included along with layout classes are a few classes to control positiong. These classes are:
@@ -124,7 +123,7 @@
 							</nav>
 						</div>
 
-						<p class="pane-content small">Menu interaction is acheived by including the crutch.js script file and applying the #menu to the menu logo's container element and #nav-expanded, .nav-expanded to the container of the links in the menu.</p>
+						<p class="pane-content small text-center">Menu interaction is acheived by including the crutch.js script file and applying the #menu to the menu logo's container element and #nav-expanded, .nav-expanded to the container of the links in the menu.</p>
 
 						<p class="pane-content">Page content may also be placed in a pane for visibility or organizational reasons. These panes included in Crutch make up most of the layout for this entire manual, in fact. Panes are created by a container element with class .pane and their contents with class .pane-content or .pane-title for complimentary styling. Panes may also be rounded by .pane-rounded and their colors and sizes may be manipulated by the utilities offered by Crutch. Panes are transparent grey by default and titles have the main theme color attributed to them.</p>
 
@@ -154,10 +153,10 @@
 			</section>
 
 			<section class="row" id="forms-and-input">
-				<div class="item">
+				<div class="item margin-right-nothing padding-right-nothing">
 					<p class="display-big">Forms and Input</p>
 
-					<div class="pane pane-rounded bg-light text-dark">
+					<div class="pane rounded-border-left bg-light text-dark">
 						<p class="pane-content">Crutch includes some minimal styling for form content that can be applied via .crutch-form. Inputs with type such as text, password and submit have default styling when .crutch-form is applied, and their width may be manipulated through either .input-long or .button-long classes. An example form is shown below.</p>
 
 						<p class="pane-content">Two alert styling classes have been added to address the needs of those developers seeking to provide form submission feedback to their users. These classes are .alert-succesful and .alert-failure</p>
@@ -177,10 +176,10 @@
 			</section>
 
 			<section class="row" id="utilities">
-				<div class="item">
+				<div class="item margin-right-nothing padding-right-nothing">
 					<p class="display-big">Utilities</p>
 
-					<div class="pane pane-rounded bg-light text-dark">
+					<div class="pane rounded-border-left bg-light text-dark">
 						<p class="pane-content">Crutch's main benefits are the utilites it offers for developers to manipulate the way that content is rendered on-screen.</p>
 
 						<p class="pane-content">Fluid image size for responsive design is provided by .image-fluid</p>
