--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" type="text/css" href="dist/css/crutch.min.css">
 	</head>
 	<body class="container-desktop-wide bg-dark text-white row flex-nowrap padding-right-nothing" id="top">
-		<aside class="item-third width-three-quarter margin-left-nothing fixed-left display-tablet-up-only margin-right-most padding-left-nothing padding-right-most">
+		<aside class="item-quarter width-three-quarter margin-left-nothing fixed-left display-tablet-up-only margin-right-most padding-left-nothing padding-right-most">
 			<nav class="row navigation flex-direction-column justify-content-start padding-right-most margin-right-most margin-left-nothing padding-left-nothing text-center">
 				<a class="navigation-logo" href="#top">Crutch</a>
 				<a class="navigation-link" href="#typography">Typography</a>
@@ -90,7 +90,7 @@
 					<p class="display-big">Layout, Positioning, Navigation and Panes</p>
 
 					<div class="pane rounded-border-left bg-light text-dark">
-						<p class="pane-content">Crutch uses a simple three column grid system for layout. Simply create a parent container called a .row, and within that row use either .item, .item-half, or .item-third to section off content. At mobile resolutions these items stack upon one-another. To keep these items from doing so, simply add the class .flex-nowrap to the parent row container element.</p>
+						<p class="pane-content">Crutch uses a simple three column grid system for layout. Simply create a parent container called a .row, and within that row use either .item, .item-three-quarter, .item-half, or .item-quarter to section off content. At mobile resolutions these items stack upon one-another. To keep these items from doing so, simply add the class .flex-nowrap to the parent row container element.</p>
 
 						<dl class="pane-content">Included along with layout classes are a few classes to control positiong. These classes are:
 							<dd>.fixed-top</dd>
@@ -203,7 +203,7 @@
 						</dl>
 
 						<dl class="pane-content">
-							Utility classes for color are as follows: 
+							Utility classes for color are as follows:
 							<dd>.text-dark</dd>
 							<dd>.text-white</dd>
 							<dd>.text-main (which colors the text based on the set main theme color in the SCSS variables, default is green)</dd>
@@ -224,7 +224,7 @@
 						</dl>
 
 						<dl class="pane-content">
-							Border utilities include: 
+							Border utilities include:
 							<dd>.border (adds border, default color is dark grey)</dd>
 							<dd>.border-none</dd>
 							<dd>.border-top-none</dd>
